--- a/Infodengue.Application/Infodengue.Application.csproj
+++ b/Infodengue.Application/Infodengue.Application.csproj
@@ -5,6 +5,10 @@
     <ProjectReference Include="..\Infodengue.Infrastructure\Infodengue.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="14.0.0" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
